--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,11 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=my:project
-
+#sonar.projectKey=my:project
+sonar.projectKey=Abc
 # --- optional properties ---
 
 # defaults to project key
-sonar.projectName=My project
+#sonar.projectName=My project
+sonar.projectName=Abc
 # defaults to 'not provided'
 sonar.projectVersion=1.0
  
